8261161: Clean up warnings in hotspot/jtreg/vmTestbase tests